objects/ISV_Limitation_Warning__mdt.object
<CustomObject>
    <description>Managed packages known to conflict with an industry upgrade</description>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <inlineHelpText>Developer name of custom label for text to display when this ISV package is detected</inlineHelpText>
        <label>Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <referenceTo>SFDC_Industry_Vertical__mdt</referenceTo>
        <relationshipLabel>ISV Limitation Warning</relationshipLabel>
        <relationshipName>ISV_Limitation_Warning</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>ISV Limitation Warning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Package_Name__c</columns>
        <columns>Vertical__c</columns>
        <columns>Namespace__c</columns>
        <columns>Custom_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ISV Limitation Warning</pluralLabel>
</CustomObject>